--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,13 @@
-<!doctype html>
-<html lang="en">
-
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-
-<body>
-  <div id="root"></div>
-</body>
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="shortcut icon" type="image/jpg" href="favicon.png" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>COlariu Pharma</title>
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
